--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -137,9 +137,9 @@ section {
   border-right: 1px solid #1d4c7c;
   border-left: 1px solid #1d4c7c;
   border-bottom: 1px solid #689bcc;
-  -webkit-box-shadow: 0 0 25px 0 rgba(104,155,204,1), inset 0 0 5px 0 rgba(0,0,0,.3);
-     -moz-box-shadow: 0 0 25px 0 rgba(104,155,204,1), inset 0 0 5px 0 rgba(0,0,0,.3);
-          box-shadow: 0 0 25px 10px rgba(104,155,204,1), inset 0 0 5px 0 rgba(0,0,0,.3);
+  -webkit-box-shadow: 0 0 10px 0 rgba(104,155,204,1), inset 0 0 5px 0 rgba(0,0,0,.3);
+     -moz-box-shadow: 0 0 10px 0 rgba(104,155,204,1), inset 0 0 5px 0 rgba(0,0,0,.3);
+          box-shadow: 0 0 10px 0 rgba(104,155,204,1), inset 0 0 5px 0 rgba(0,0,0,.3);
   background-color: #1b5288;
 }
 
