--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -98,7 +98,15 @@ nav {
 /*Настройки формы*/
 
 section {
-  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 50%;
+  height: 30%;
+  margin: auto;
+  /*margin: 0 auto;*/
   width: 560px;
 }
 .form {
@@ -137,9 +145,9 @@ section {
   border-right: 1px solid #1d4c7c;
   border-left: 1px solid #1d4c7c;
   border-bottom: 1px solid #689bcc;
-  -webkit-box-shadow: 0 0 15px 1px rgba(104,155,204,.75), inset 0 0 5px 0 rgba(0,0,0,.3);
-     -moz-box-shadow: 0 0 15px 1px rgba(104,155,204,.75), inset 0 0 5px 0 rgba(0,0,0,.3);
-          box-shadow: 0 0 15px 1px rgba(104,155,204,.75), inset 0 0 5px 0 rgba(0,0,0,.3);
+  -webkit-box-shadow: 0 0 15px 1px rgba(104,155,204,.85), inset 0 0 5px 0 rgba(0,0,0,.3);
+     -moz-box-shadow: 0 0 15px 1px rgba(104,155,204,.85), inset 0 0 5px 0 rgba(0,0,0,.3);
+          box-shadow: 0 0 15px 1px rgba(104,155,204,.85), inset 0 0 5px 0 rgba(0,0,0,.3);
   background-color: #1b5288;
 }
 
