--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -122,6 +122,11 @@ section {
   line-height: 62px;
   background-color: rgba(0,0,0,.65);
 }
+.terms-of-service {
+  width: 310px;
+  color: #ccc;
+  font-size: 11px;
+}
 
 /*Свойства полей ввода*/
 
