--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -123,7 +123,10 @@ section {
   background-color: rgba(0,0,0,.65);
 }
 .submit {
+  margin-bottom: 20px;
   padding: 10px 14px;
+  font-size: 14px;
+
 }
 .terms-of-service {
   margin: 0 auto;
