--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -1,9 +1,31 @@
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url('../fonts/helveticaneue-thin-webfont.eot');
+    src: url('../fonts/helveticaneue-thin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/helveticaneue-thin-webfont.woff2') format('woff2'),
+         url('../fonts/helveticaneue-thin-webfont.woff') format('woff'),
+         url('../fonts/helveticaneue-thin-webfont.ttf') format('truetype'),
+         url('../fonts/helveticaneue-thin-webfont.svg#helvetica_neueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url('../fonts/helveticaneue-thin-webfont.eot');
+    src: url('../fonts/helveticaneue-thin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/helveticaneue-thin-webfont.woff2') format('woff2'),
+         url('../fonts/helveticaneue-thin-webfont.woff') format('woff'),
+         url('../fonts/helveticaneue-thin-webfont.ttf') format('truetype'),
+         url('../fonts/helveticaneue-thin-webfont.svg#helvetica_neueregular') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
 html, body {
-  min-height: 100%;
-  /*Позволяет растянуть фон*/
+  min-height: 100%;   /*Позволяет растянуть фон*/
 }
 body {
-  font-family: Tahoma, sans-serif;
+  font-family: "Helvetica Neue", Tahoma, sans-serif;
+  font-weight: lighter;
   font-size: 14px;
   color: white;
 }
@@ -126,13 +148,14 @@ section {
   margin-bottom: 20px;
   padding: 10px 14px;
   font-size: 14px;
-
+  font-weight: bold;
 }
 .terms-of-service {
   margin: 0 auto;
   width: 310px;
   color: #ccc;
   font-size: 11px;
+  font-weight: lighter;
 }
 .terms-of-service a {
   color: #ccc;
@@ -153,6 +176,7 @@ section {
   border-left: 1px solid #111;
   border-bottom: 1px solid #484746;
   background-color: #111;
+  font-family: "Helvetica Neue";
 }
 .field:focus {
   border-top: 1px solid #1d4c7c;
