--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -116,6 +116,12 @@ nav {
 .underline {
   text-decoration: underline;
 }
+.bold {
+  position: relative;
+}
+.bold:hover {
+  font-weight: bold;
+}
 
 /*Настройки формы*/
 
