--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -89,11 +89,15 @@ nav {
   text-shadow: 0 0 7px rgba(255, 255, 255, .95); /*Использовал это свойство, так как жирный текст менят ширину кнопки*/
   font-weight: bold;
 }
-.second-menu li a:hover {
-  background: linear-gradient(to bottom, #50afdc, #2e7ac4);
-  padding: 9px 13px;
-  border: 1px solid #5aa4de;
-  border-radius: 1px;
+.first-menu li a::after {
+    display:block;
+    content:attr(title);
+    font-weight:bold;
+    height:1px;
+    color:transparent;
+    overflow:hidden;
+    visibility:hidden;
+    margin-bottom:-1px;
 }
 .first-menu::after {
   content: "";
@@ -101,6 +105,12 @@ nav {
   margin: 2px 3px 2px 10px;
   height: 30px;
   border-left: 1px solid #4eabda;
+}
+.second-menu li a:hover {
+  background: linear-gradient(to bottom, #50afdc, #2e7ac4);
+  padding: 9px 13px;
+  border: 1px solid #5aa4de;
+  border-radius: 1px;
 }
 .flag::before {
   content: "";
@@ -115,9 +125,6 @@ nav {
 }
 .underline {
   text-decoration: underline;
-}
-.bold {
-  position: relative;
 }
 
 /*Настройки формы*/
